[tool.poetry]
name = "docs"
version = "0.1.0"
description = "Autonolas ecosystem developer documentation"
authors = ["developer-valory <develope@valory.xyz>"]
license = "Apache-2.0 license"

[tool.poetry.dependencies]
python = "^3.10"
tomte = {extras = ["tox","docs"], version = "^0.2.13"}
mkdocs-monorepo-plugin = "^1.0.4"
mkdocs-redirects = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
