[project]
name = "docs"
version = "0.1.0"
description = "Olas ecosystem developer documentation"
authors = [{ name = "developer-valory", email = "develope@valory.xyz" }]
requires-python = ">=3.10,<4"
license = "Apache-2.0"
dependencies = [
    "tomte[tox, docs]==0.2.15",
    "mkdocs-monorepo-plugin>=1.0.5,<2",
]

[tool.uv]
package = false
